--- a/sistem_koperasi_fe/package.json
+++ b/sistem_koperasi_fe/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --port 3100 --turbopack",
     "build": "next build --turbopack",
-    "start": "next start"
+    "start": "next start -p 3100"
   },
   "dependencies": {
+    "axios": "^1.12.2",
+    "dotenv": "^17.2.3",
+    "js-cookie": "^3.0.5",
+    "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.4"
+    "react-dom": "19.1.0"
   }
 }
