--- a/sistem_koperasi_fe/package.json
+++ b/sistem_koperasi_fe/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "chart.js": "^4.5.0",
     "dotenv": "^17.2.3",
     "js-cookie": "^3.0.5",
     "next": "15.5.4",
