--- a/sistem_koperasi_be/package.json
+++ b/sistem_koperasi_be/package.json
@@ -17,9 +17,14 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "html2pdf": "^0.0.11",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.3",
     "knex": "^3.1.0",
-    "mysql2": "^3.15.1"
+    "mysql2": "^3.15.1",
+    "pdfjs": "^2.5.4",
+    "pdfjs-dist": "^5.4.149",
+    "react-pdf": "^10.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
