--- a/sistem_koperasi_be/package.json
+++ b/sistem_koperasi_be/package.json
@@ -18,6 +18,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "html2pdf": "^0.0.11",
+    "joi": "^18.0.1",
+    "jose": "^6.1.0",
     "js-cookie": "^3.0.5",
     "jspdf": "^3.0.3",
     "knex": "^3.1.0",
