--- a/sistem_koperasi_fe/package.json
+++ b/sistem_koperasi_fe/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.12.2",
     "chart.js": "^4.5.0",
     "dotenv": "^17.2.3",
+    "jose": "^6.1.0",
     "js-cookie": "^3.0.5",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
