--- a/sistem_koperasi_be/package.json
+++ b/sistem_koperasi_be/package.json
@@ -26,7 +26,8 @@
     "mysql2": "^3.15.1",
     "pdfjs": "^2.5.4",
     "pdfjs-dist": "^5.4.149",
-    "react-pdf": "^10.1.0"
+    "react-pdf": "^10.1.0",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
